fix search text color invisible (bug 1127281)

--- a/src/media/css/header.styl
+++ b/src/media/css/header.styl
@@ -107,7 +107,7 @@ body {
     background: $greyscale-light-grey url(../img/pretty/search.svg) 8px 50% no-repeat;
     border: 1px solid $greyscale-light-grey-tapped;
     border-radius: 5px;
-    color: $greyscale-light-grey-hover;
+    color: $greyscale-black;
     font: 300 20px/28px $open-stack;
     height: 34px;
     outline: none;
